name:                   cabal-fail-one
version:                0.1
synopsis:               A reproduction of one Cabal failure.
homepage:               https://github.com/mietek/cabal-fail-one
license:                MIT
license-file:           LICENSE.md
author:                 Miëtek Bak
maintainer:             mietek@bak.io
copyright:              © 2014 Miëtek Bak
build-type:             Simple
cabal-version:          >= 1.10

library
  exposed-modules:        Cabal.Fail.One
  hs-source-dirs:         src/lib
  ghc-options:            -Wall -Werror
  default-language:       Haskell2010
  build-depends:          base

executable cabal-fail-one
  main-is:                cabal-fail-one.hs
  hs-source-dirs:         src
  ghc-options:            -Wall -Werror
  default-language:       Haskell2010
  build-depends:          base, cabal-fail-one

test-suite test
  main-is:                test.hs
  hs-source-dirs:         test
  ghc-options:            -Wall -Werror
  type:                   exitcode-stdio-1.0
  default-language:       Haskell2010
  build-depends:          base, cabal-fail-one
