name:               cabal-issue-mcmxix
version:            1.0.0
synopsis:           An illustration of Cabal issue #1919.
homepage:           https://github.com/mietek/cabal-issue-mcmxix
license:            MIT
license-file:       LICENSE.md
author:             Miëtek Bak
maintainer:         mietek@bak.io
copyright:          © 2014 Miëtek Bak
build-type:         Simple
cabal-version:      >= 1.10

library
  exposed-modules:    Cabal.Issue.Mcmxix
  hs-source-dirs:     src/lib
  ghc-options:        -Wall -Werror
  default-language:   Haskell2010
  build-depends:      base

executable cabal-issue-mcmxix
  main-is:            Main.hs
  hs-source-dirs:     src
  ghc-options:        -Wall -Werror
  default-language:   Haskell2010
  build-depends:      base, cabal-issue-mcmxix

test-suite test
  main-is:            Main.hs
  hs-source-dirs:     test
  ghc-options:        -Wall -Werror
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  build-depends:      base, cabal-issue-mcmxix
